[package]
name = "simple_gopher_in_rust"
version = "0.1.0"
edition = "2021"
authors = ["Tr3nchHvlk <gtbr6729@outlook.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.24", features = ["serde"] }
clap = { version = "4.2.4", features = ["derive"] }
lazy_static = "1.4.0"
path-clean = "1.0.1"
regex = "1.7.3"
